--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,5 @@
 @import url(../vendor/fonts/font.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
