--- a/blocks/profile/__about-self/profile__about-self.css
+++ b/blocks/profile/__about-self/profile__about-self.css
@@ -1,5 +1,5 @@
-.footer__copyright {
-  color: #545454;
+.profile__about-self {
+  color: #fff;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
