--- a/blocks/element/__place/element__place.css
+++ b/blocks/element/__place/element__place.css
@@ -5,4 +5,9 @@
   font-size: 24px;
   line-height: 29px;
   margin-block: 0;
+  /*переполнение*/
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 190px;
 }
