--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,4 +3,8 @@
   height: 361px;
   background-color: white;
   border-radius: 10px;
+  overflow: hidden;
+  margin-block: 0;
+  margin-inline: 0;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
 }
