--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -7,6 +7,12 @@
   width: 100%;
   box-sizing: border-box;
   margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  /*переполнение*/
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .form__item:last-child {
