--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   min-height: 50px;
   border: none;
+  border-radius: 2px;
   background-color: #000;
   font-style: normal;
   font-weight: normal;
@@ -10,4 +11,11 @@
   line-height: 22px;
   text-align: center;
   color: #fff;
+  cursor: pointer;
+  transition: opacity .4s linear;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, .25));
+}
+
+.form__submit-button:hover {
+  opacity: .8;
 }
