--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,9 @@
   border-bottom: 1px solid #545454;
   padding-bottom: 41px;
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding-bottom: 31.6px;
+  }
+}
