--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,5 +8,11 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 45px 200px 60px;
+  padding: 45px 0 60px;
+}
+
+@media screen and (max-width: 1024px) {
+  .page {
+    padding: 28px 19px 36px;
+  }
 }
