--- a/blocks/profile/__about-self/profile__about-self.css
+++ b/blocks/profile/__about-self/profile__about-self.css
@@ -5,4 +5,19 @@
   font-size: 18px;
   line-height: 22px;
   margin-block: 0;
+  /* margin-top: 16px; */
+  /*переполнение*/
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-right: 54px;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__about-self {
+    font-size: 14px;
+    line-height: 17px;
+    /* margin-right: 36px; */
+    margin: 0;
+  }
 }
