--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,13 +1,26 @@
 .profile__add-button {
   display: inline-block;
   background-color: black;
-  border: none;
+  background-image: url(../../../images/VectorAdd.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 2px solid #fff;
+  border-radius: 2px;
   padding: 0;
   cursor: pointer;
   transition: opacity .4s linear;
   margin-left: auto;
+  min-width: 150px;
+  height: 50px;
 }
 
 .profile__add-button:hover {
   opacity: .6;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__add-button {
+    width: 100%;
+    background-image: url(../../../images/AddButtonSmall.svg);
+  }
 }
