--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,16 @@
 .profile__avatar {
   border-radius: 50%;
   margin-right: 30px;
+  min-width: 120px;
+  height: 120px;
+  background-image: url(../../../images/Avatar-kusto.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__avatar {
+    margin: 0 0 26px;
+  }
 }
