--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,12 +1,27 @@
 .profile__edit-button {
-  display: inline-block;
   background-color: black;
-  border: none;
+  border: 1px solid #fff;
   padding: 0;
   cursor: pointer;
   transition: opacity .4s linear;
+  margin-right: 30px;
+  min-width: 24px;
+  min-height: 24px;
+  background-image: url(../../../images/VectorEdit.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  /* background-size: ; */
 }
 
 .profile__edit-button:hover {
   opacity: .6;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__edit-button {
+    min-width: 18px;
+    min-height: 18px;
+    background-size: 42%;
+    margin: 0;
+  }
 }
