--- a/pages/index.css
+++ b/pages/index.css
@@ -2,27 +2,37 @@
 @import url(../vendor/fonts/font.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/main-page/main-page.css);
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__profile-info/profile__profile-info.css);
+@import url(../blocks/profile/__edit-info/profile__edit-info.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../blocks/profile/__edit-button-image/profile__edit-button-image.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__add-button-image/profile__add-button-image.css);
 @import url(../blocks/profile/__about-self/profile__about-self.css);
 @import url(../blocks/elements/elements.css);
+
+/* @import url(../blocks/elements/__list/elements__list.css); */
+
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__place/element__place.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__caption/element__caption.css);
 @import url(../blocks/element/__heart/element__heart.css);
+@import url(../blocks/element/__heart/_active/element__heart_active.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__header/form__header.css);
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+
+/* @import url(../blocks/popup/__container/popup__container.css); */
+
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/form/form.css);
 @import url(../blocks/form/__item/form__item.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
 @import url(../blocks/footer/footer.css);
