--- a/blocks/elements-section/elements-section.css
+++ b/blocks/elements-section/elements-section.css
@@ -1,17 +1,16 @@
-.footer {
-  max-width: 880px;
+.elements-section {
   width: 100%;
-  padding-top: 66px;
+  max-width: 880px;
 }
 
 @media screen and (max-width: 940px) {
-  .footer {
+  .elements-section {
     max-width: 581px;
   }
 }
 
 @media screen and (max-width: 641px) {
-  .footer {
+  .elements-section {
     max-width: 282px;
   }
 }
