--- a/blocks/form/__header/form__header.css
+++ b/blocks/form/__header/form__header.css
@@ -6,3 +6,13 @@
   font-size: 24px;
   line-height: 29px;
 }
+
+@media screen and (max-width: 940px) {
+  .form__header {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 75px;
+  }
+}
