--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -6,8 +6,10 @@
   line-height: 17px;
   width: 100%;
   box-sizing: border-box;
+  padding: 0;
   margin-bottom: 30px;
   border: none;
+  padding-bottom: 13px;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   /*переполнение*/
   text-overflow: ellipsis;
@@ -15,6 +17,16 @@
   overflow: hidden;
 }
 
-.form__item:last-child {
+.form__item:focus {
+  outline: none;
+}
+
+.form__item:last-of-type {
   margin-bottom: 48px;
+}
+
+@media screen and (max-width: 940px) {
+  .form__item:last-of-type {
+    margin-bottom: 45px;
+  }
 }
