--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -14,8 +14,15 @@
   cursor: pointer;
   transition: opacity .4s linear;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, .25));
+  padding: 0;
 }
 
 .form__submit-button:hover {
   opacity: .8;
+}
+
+@media screen and (min-width: 940px) {
+  .form__submit-button {
+    min-height: 46px;
+  }
 }
