--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -9,9 +9,10 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 940px) {
   .form {
     width: 282px;
     height: 322px;
+    padding: 25px 22px;
   }
 }
