--- a/blocks/main-page/main-page.css
+++ b/blocks/main-page/main-page.css
@@ -1,8 +1,14 @@
 .main-page {
   padding: 40px 0 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 940px) {
   .main-page {
     padding: 42px 0 0;
   }
