--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,10 +8,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 45px 0 60px;
+  padding: 45px 19px 60px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 940px) {
   .page {
     padding: 28px 19px 36px;
   }
