--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,10 +2,19 @@
   display: flex;
   /* justify-content: space-between; */
   align-items: center;
+  width: 100%;
+  max-width: 880px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 940px) {
   .profile {
     flex-direction: column;
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 641px) {
+  .profile {
+    max-width: 282px;
   }
 }
