--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -1,11 +1,12 @@
 .element__heart {
   border: none;
-  background-color: white;
+  background-color: #fff;
   background-image: url(../../../images/heart.svg);
   background-position: center;
   background-repeat: no-repeat;
   min-width: 22px;
   height: 19px;
+  padding: 0;
   cursor: pointer;
   transition: opacity .4s linear;
 }
