--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,4 +5,13 @@
   font-size: 18px;
   line-height: 22px;
   margin-block: 0;
+  padding-top: 66px;
+}
+
+@media screen and (max-width: 940px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 19px;
+    padding-top: 48px;
+  }
 }
