--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,18 +2,18 @@
   width: 100%;
   max-width: 880px;
   border-bottom: 1px solid #545454;
-  padding-bottom: 41px;
+  padding-bottom: 40px;
 }
 
 @media screen and (max-width: 940px) {
   .header {
-    padding-bottom: 31.6px;
+    padding-bottom: 30.6px;
     max-width: 581px;
   }
 }
 
 @media screen and (max-width: 641px) {
   .header {
-    max-width: 282px;
+    width: 320px;
   }
 }
