--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-  background-color: black;
+  background-color: #000;
   border: 1px solid #fff;
   padding: 0;
   cursor: pointer;
