--- a/blocks/element/__caption/element__caption.css
+++ b/blocks/element/__caption/element__caption.css
@@ -1,6 +1,6 @@
 .element__caption {
   padding: 26px 20px 0 21px;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
 }
