--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,7 @@
 .element {
   width: 282px;
   height: 361px;
-  background-color: white;
+  background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
   margin-block: 0;
