--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -9,7 +9,7 @@
   padding: 0;
   margin-bottom: 30px;
   border: none;
-  padding-bottom: 13px;
+  padding-bottom: 9px;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   /*переполнение*/
   text-overflow: ellipsis;
@@ -17,12 +17,17 @@
   overflow: hidden;
 }
 
-.form__item:focus {
+.form__item:focus,
+ :active {
   outline: none;
 }
 
 .form__item:last-of-type {
   margin-bottom: 48px;
+}
+
+.form__item::placeholder {
+  color: #000;
 }
 
 @media screen and (max-width: 940px) {
