--- a/blocks/element/__caption/element__caption.css
+++ b/blocks/element/__caption/element__caption.css
@@ -1,5 +1,5 @@
 .element__caption {
-  padding: 26px 20px 0 21px;
+  padding: 26px 20px 24px 21px;
   display: flex;
   align-items: center;
   justify-content: space-between;
