--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,10 +1,9 @@
 .element {
   width: 282px;
-  height: 361px;
+  /* height: 361px; */
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
   margin-block: 0;
   margin-inline: 0;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
 }
