исправить прозрачность фона кнопок и некоторых элементов

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,5 @@
 .profile__add-button {
-  display: inline-block;
-  background-color: #000;
+  background-color: transparent;
   background-image: url(../../../images/VectorAdd.svg);
   background-position: center;
   background-repeat: no-repeat;
