--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -1,6 +1,6 @@
 .element__heart {
   border: none;
-  background-color: #fff;
+  background-color: transparent;
   background-image: url(../../../images/heart.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -12,5 +12,5 @@
 }
 
 .element__heart:hover {
-  opacity: .6;
+  opacity: .5;
 }
