--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   max-width: 880px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
   padding-bottom: 40px;
 }
 
