--- a/pages/index.css
+++ b/pages/index.css
@@ -20,7 +20,10 @@
 @import url(../blocks/element/__caption/element__caption.css);
 @import url(../blocks/element/__heart/element__heart.css);
 @import url(../blocks/element/__heart/_active/element__heart_active.css);
-@import url(../blocks/form/form.css);
+
+/* @import url(../blocks/form/form.css); */
+
+@import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__header/form__header.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
