--- a/blocks/popup/__form-container/popup__form-container.css
+++ b/blocks/popup/__form-container/popup__form-container.css
@@ -1,4 +1,4 @@
-.form__container {
+.popup__form-container {
   background: #fff;
   width: 430px;
   padding: 34px 36px 37px;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 940px) {
-  .form__container {
+  .popup__form-container {
     width: 282px;
     padding: 25px 22px;
   }
