--- a/blocks/popup/__form-header/popup__form-header.css
+++ b/blocks/popup/__form-header/popup__form-header.css
@@ -1,4 +1,4 @@
-.form__header {
+.popup__form-header {
   margin-block: 0;
   margin-bottom: 48px;
   font-style: normal;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 940px) {
-  .form__header {
+  .popup__form-header {
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 75px;
