--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url(../blocks/profile/__about-self/profile__about-self.css);
 @import url(../blocks/elements-section/elements-section.css);
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__item-delete/elements__item-delete.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__place/element__place.css);
 @import url(../blocks/element/__image/element__image.css);
