--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url(../blocks/profile/__about-self/profile__about-self.css);
 @import url(../blocks/elements-section/elements-section.css);
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__item/elements__item.css);
 @import url(../blocks/elements/__item-delete/elements__item-delete.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__place/element__place.css);
@@ -22,11 +23,14 @@
 @import url(../blocks/element/__heart/element__heart.css);
 @import url(../blocks/element/__heart/_active/element__heart_active.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__view-container/popup__view-container.css);
 @import url(../blocks/popup/__form-container/popup__form-container.css);
 @import url(../blocks/popup/__form-header/popup__form-header.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/form/__item/form__item.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/element-view/element-view.css);
+@import url(../blocks/element-view/__image/element-view__image.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
