--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,10 @@
 .popup {
-  justify-content: center;
-  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(0, 0, 0, .5);
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity .4s linear;
 }
