--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/font.css);
+@import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -23,6 +24,9 @@
 @import url(../blocks/element/__heart/element__heart.css);
 @import url(../blocks/element/__heart/_active/element__heart_active.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_type/popup_type_edit-profile.css);
+@import url(../blocks/popup/_type/popup_type_add-card.css);
+@import url(../blocks/popup/_type/popup_type_view-image.css);
 @import url(../blocks/popup/__view-container/popup__view-container.css);
 @import url(../blocks/popup/__form-container/popup__form-container.css);
 @import url(../blocks/popup/__form-header/popup__form-header.css);
@@ -32,5 +36,6 @@
 @import url(../blocks/form/__submit-button/form__submit-button.css);
 @import url(../blocks/element-view/element-view.css);
 @import url(../blocks/element-view/__image/element-view__image.css);
+@import url(../blocks/element-view/__place/element-view__place.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
