--- a/blocks/element-view/__place/element-view__place.css
+++ b/blocks/element-view/__place/element-view__place.css
@@ -4,7 +4,7 @@
   font-size: 12px;
   line-height: 15px;
   text-align: left;
-  vertical-align: Top;
+  vertical-align: top;
   padding-top: 10px;
   color: #fff;
   margin-block: 0;
