--- a/pages/index.css
+++ b/pages/index.css
@@ -34,6 +34,7 @@
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/form/__item/form__item.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__error-massage/form__error-massage.css);
 @import url(../blocks/element-view/element-view.css);
 @import url(../blocks/element-view/__image/element-view__image.css);
 @import url(../blocks/element-view/__place/element-view__place.css);
