--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,5 +6,5 @@
   height: 100%;
   visibility: hidden;
   opacity: 0;
-  transition: opacity .4s linear;
+  transition: opacity .3s linear, .3s linear;
 }
