--- a/pages/index.css
+++ b/pages/index.css
@@ -35,10 +35,10 @@
 @import url(../blocks/form/__item/form__item.css);
 @import url(../blocks/form/__item/_error/form__item_error.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__submit-button/_disabled/form__submit-button_disabled.css);
 @import url(../blocks/form/__error-message/form__error-message.css);
 @import url(../blocks/element-view/element-view.css);
 @import url(../blocks/element-view/__image/element-view__image.css);
 @import url(../blocks/element-view/__place/element-view__place.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks/proba.css);
