--- a/blocks/form/__error-message/form__error-message.css
+++ b/blocks/form/__error-message/form__error-message.css
@@ -2,15 +2,22 @@
   font-weight: 400;
   font-style: normal;
   font-size: 12px;
-  line-height: 15px;
-  /*Line height: 100%;*/
-  vertical-align: top;
+  /* line-height: 15px; */
+  Line-height: 1;
   color: #FF0000;
-  margin-bottom: 13px;
   display: block;
-  min-height: 20px;
+  min-height: 30px;
+  padding-top: 5px;
+  box-sizing: border-box;
+  visibility: hidden;
 }
 
 .form__error-message:last-of-type {
-  margin-bottom: 31px;
+  min-height: 48px;
+}
+
+@media screen and (max-width: 940px) {
+  .form__error-message:last-of-type {
+    min-height: 45px;
+  }
 }
