--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -7,7 +7,7 @@
   width: 100%;
   box-sizing: border-box;
   padding: 0;
-  margin-bottom: 5px;
+  /* margin-bottom: 30px; */
   border: none;
   padding-bottom: 9px;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
@@ -25,3 +25,15 @@
 .form__item::placeholder {
   color: #000;
 }
+
+
+/* .form__item:last-of-type {
+   margin-bottom: 48px;
+} */
+
+
+/* @media screen and (max-width: 940px) {
+  .form__item:last-of-type {
+    margin-bottom: 45px;
+  }
+} */
