--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,7 @@
 @import url(../blocks/form/__submit-button/form__submit-button.css);
 @import url(../blocks/form/__submit-button/_disabled/form__submit-button_disabled.css);
 @import url(../blocks/form/__error-message/form__error-message.css);
+@import url(../blocks/form/__error-message/_visible/form__error-message_visible.css);
 @import url(../blocks/element-view/element-view.css);
 @import url(../blocks/element-view/__image/element-view__image.css);
 @import url(../blocks/element-view/__place/element-view__place.css);
