--- a/blocks/form/__error-message/form__error-message.css
+++ b/blocks/form/__error-message/form__error-message.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-size: 12px;
   /* line-height: 15px; */
-  Line-height: 1;
+  line-height: 1;
   color: #FF0000;
   display: block;
   min-height: 30px;
