--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,12 +1,11 @@
-.profile__avatar {
+profile__avatar {
   border-radius: 50%;
-  margin-right: 30px;
-  min-width: 120px;
+  width: 120px;
   height: 120px;
+  object-fit: cover;
+  transition: opacity .4s linear;
 }
 
-@media screen and (max-width: 940px) {
-  .profile__avatar {
-    margin: 0 0 26px;
-  }
+.profile__avatar:hover {
+  opacity: .2;
 }
