--- a/main.css
+++ b/main.css
@@ -8,7 +8,8 @@
 .profile{align-items:center;display:flex;max-width:880px;width:100%}@media screen and (max-width:940px){.profile{flex-direction:column;max-width:581px}}@media screen and (max-width:641px){.profile{max-width:282px}}
 .profile__profile-info{max-width:60%}@media screen and (max-width:940px){.profile__profile-info{margin-bottom:33px;max-width:100%;text-align:center}}
 .profile__edit-info{align-items:center;display:flex;margin-bottom:9px}@media screen and (max-width:940px){.profile__edit-info{margin-bottom:7px}}
-.profile__avatar{border-radius:50%;height:120px;margin-right:30px;min-width:120px}@media screen and (max-width:940px){.profile__avatar{margin:0 0 26px}}
+profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;transition:opacity .4s linear;width:120px}.profile__avatar:hover{opacity:.2}
+.profile__avatar-button{background-color:transparent;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;background-size:20%;border:none;border-radius:50%;cursor:pointer;height:120px;margin-right:30px;padding:0;width:120px}@media screen and (max-width:940px){.profile__avatar-button{margin:0 0 26px}}
 .profile__name{color:#fff;font-size:42px;font-style:normal;font-weight:500;line-height:48px;margin:0 18px 0 0;margin-block:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:940px){.profile__name{font-size:27px;line-height:33px;margin-right:10px;padding-left:28px;text-align:center}}
 .profile__edit-button{background-color:transparent;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;cursor:pointer;min-height:24px;min-width:24px;padding:0;transition:opacity .4s linear}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:940px){.profile__edit-button{background-size:42%;margin:0;min-height:18px;min-width:18px}}
 .profile__add-button{background-color:transparent;background-image:url(bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;cursor:pointer;height:50px;margin-left:auto;min-width:150px;padding:0;transition:opacity .4s linear}.profile__add-button:hover{opacity:.6}@media screen and (max-width:940px){.profile__add-button{background-image:url(d5d6f8af0577b9c95ee4.svg);width:100%}}
@@ -22,11 +23,14 @@
 .element__image{display:block;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}
 .element__caption{align-items:center;display:flex;justify-content:space-between;padding:26px 20px 24px 21px}
 .element__heart{background-color:transparent;background-image:url(1ad06e85f169668a1f36.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:19px;min-width:22px;padding:0;transition:opacity .4s linear}.element__heart:hover{opacity:.5}
+.element__like-number{display:block;font-size:13px;font-weight:400;line-height:100%;text-align:center}
 .element__heart_active{background-image:url(35948469632d0421d697.svg)}
 .popup{height:100%;left:0;opacity:0;position:fixed;top:0;transition:opacity .3s linear,.3s linear;visibility:hidden;width:100%}
 .popup_type_edit-profile{align-items:center;background:rgba(0,0,0,.5);display:flex;justify-content:center}
 .popup_type_add-card{align-items:center;background:rgba(0,0,0,.5);display:flex;justify-content:center}
 .popup_type_view-image{align-items:center;background:rgba(0,0,0,.9);display:flex;justify-content:center}
+.popup_type_chenge-avatar{align-items:center;background:rgba(0,0,0,.5);display:flex;justify-content:center}
+.popup_type_delete-card{align-items:center;background:rgba(0,0,0,.5);display:flex;justify-content:center}
 .popup__view-container{position:relative}
 .popup__form-container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;padding:34px 36px 37px;position:relative;width:430px}@media screen and (max-width:940px){.popup__form-container{padding:25px 22px;width:282px}}
 .popup__form-header{font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin-block:0;margin-bottom:48px}@media screen and (max-width:940px){.popup__form-header{font-size:18px;line-height:22px;margin-bottom:75px}}
